@@ -514,13 +514,14 @@ jobs:
     name: ${{ matrix.system.vc }}, ${{ matrix.arch }}
     runs-on: ${{ matrix.system.os }}   # Runs-on foreach value of strategy.matrix.system.os
     strategy:
-      fail-fast: false  # 'false' means Don't stop matrix workflows even if some matrix failed.
+      fail-fast: false  # 'false' means: Don't stop matrix workflows even if some matrix failed.
       matrix:
         system: [
           { os: windows-2022, vc: "VC++ 2022", clangcl: 'false', }, # CMake failed to configure clang-cl with VC++2022.
           { os: windows-2019, vc: "VC++ 2019", clangcl: 'true',  },
         ]
         arch: [ x64, Win32, ARM, ARM64 ]
+
     steps:
     - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
 
@@ -552,6 +553,23 @@ jobs:
       if: ${{ matrix.system.clangcl == 'true' && ( matrix.arch == 'x64' || matrix.arch == 'Win32' ) }}
       run: |
         .\cmake_unofficial\build-clang-cl\Release\xxhsum.exe -bi1
+
+    - name: Build ${{ matrix.system.os }}, clang-cl, ${{ matrix.arch }}, with DISPATCH
+      # DISPATCH only if target arch is x64 or Win32.
+      if: ${{ matrix.system.clangcl == 'true' && ( matrix.arch == 'x64' || matrix.arch == 'Win32' ) }}
+      run: |
+        cd cmake_unofficial
+        mkdir build-clang-cl-dispatch
+        cd build-clang-cl-dispatch
+        cmake .. -DCMAKE_BUILD_TYPE=Release -DDISPATCH=ON -A x64 -DCMAKE_GENERATOR_TOOLSET=ClangCL
+        cmake --build . --config Release
+
+    - name: Runtime Test (clang-cl + DISPATCH)
+      # Run benchmark for testing only if target arch is x64 or Win32.
+      if: ${{ matrix.system.clangcl == 'true' && ( matrix.arch == 'x64' || matrix.arch == 'Win32' ) }}
+      run: |
+        .\cmake_unofficial\build-clang-cl-dispatch\Release\xxhsum.exe -V | grep autoVec
+        .\cmake_unofficial\build-clang-cl-dispatch\Release\xxhsum.exe -bi1
 
 
   # Windows, { mingw64, mingw32 }
